--- a/pricing.html
+++ b/pricing.html
@@ -163,11 +163,11 @@
                                   <h3 class="pricing-cart__subject-product_header" style="margin-top:0;">Physics</h3>
                                   <div class="pricing-cart__subject-product_detail">
                                     <ul class="subject-product__ul subject-product__ul--header">
-                                      <li class="subject-product__li">PRODUCT</li>
-                                      <li class="subject-product__li">INFO</li>
-                                      <li class="subject-product__li">SKU</li>
-                                      <li class="subject-product__li">MRP(In Rs.)</li>
-                                      <li class="subject-product__li">OFFER</li>
+                                      <li class="subject-product__li subject-product__li--pro">PRODUCT</li>
+                                      <li class="subject-product__li subject-product__li--info">INFO</li>
+                                      <li class="subject-product__li subject-product__li--sku">SKU</li>
+                                      <li class="subject-product__li subject-product__li--rs">MRP(In Rs.)</li>
+                                      <li class="subject-product__li subject-product__li--offer">OFFER</li>
                                     </ul>
                                     <ul class="subject-product__ul subject-product__ul--product">
                                       <li class="subject-product__li subject-product__li--product" style="padding:0 20px;">
@@ -178,44 +178,44 @@
                                       <li class="subject-product__li subject-product__li--product">Ultimate Test Series - Full length Test</li>
                                       <li class="subject-product__li subject-product__li--product"><i class="fa fa-info-circle"></i></li>
                                       <li class="subject-product__li subject-product__li--product">Chapter-wise Test </li>
-                                      <li class="subject-product__li subject-product__li--product"><del>1150</del></li>
-                                      <li class="subject-product__li subject-product__li--product">1150</li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:150px;"><del>1150</del></li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:160px;">1150</li>
                                     </ul>
                                     <ul class="subject-product__ul subject-product__ul--product">
                                       <li class="subject-product__li subject-product__li--product" style="padding:0 20px;">
                                         <div class="checkbox">
-                                          <input type="checkbox" value="None" id="checkbox" name="check"/><label for="checkbox"></label>
+                                          <input type="checkbox" value="None" id="checkbox" name="check"/><label class="checkbox__label" for="checkbox"></label>
                                         </div>
                                       </li>
                                       <li class="subject-product__li subject-product__li--product">Ultimate Test Series - Full length Test</li>
                                       <li class="subject-product__li subject-product__li--product"><i class="fa fa-info-circle"></i></li>
                                       <li class="subject-product__li subject-product__li--product">Chapter-wise Test </li>
-                                      <li class="subject-product__li subject-product__li--product"><del>1150</del></li>
-                                      <li class="subject-product__li subject-product__li--product">1150</li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:150px;"><del>1150</del></li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:160px;">1150</li>
                                     </ul>
                                     <ul class="subject-product__ul subject-product__ul--product">
                                       <li class="subject-product__li subject-product__li--product" style="padding:0 20px;">
                                         <div class="checkbox">
-                                          <input type="checkbox" value="None" id="checkbox" name="check"/><label for="checkbox"></label>
+                                          <input type="checkbox" value="None" id="checkbox" name="check"/><label class="checkbox__label" for="checkbox"></label>
                                         </div>
                                       </li>
                                       <li class="subject-product__li subject-product__li--product">Ultimate Test Series - Full length Test</li>
                                       <li class="subject-product__li subject-product__li--product"><i class="fa fa-info-circle"></i></li>
                                       <li class="subject-product__li subject-product__li--product">Chapter-wise Test </li>
-                                      <li class="subject-product__li subject-product__li--product"><del>1150</del></li>
-                                      <li class="subject-product__li subject-product__li--product">1150</li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:150px;"><del>1150</del></li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:160px;">1150</li>
                                     </ul>
-                                    <ul class="subject-product__ul subject-product__ul--product">
+                                    <ul class="subject-product__ul subject-product__ul--product" style="border-bottom:0;">
                                       <li class="subject-product__li subject-product__li--product" style="padding:0 20px;">
                                         <div class="checkbox">
-                                          <input type="checkbox" value="None" id="checkbox" name="check"/><label for="checkbox"></label>
+                                          <input type="checkbox" value="None" id="checkbox" name="check"/><label class="checkbox__label" for="checkbox"></label>
                                         </div>
                                       </li>
                                       <li class="subject-product__li subject-product__li--product">Ultimate Test Series - Full length Test</li>
                                       <li class="subject-product__li subject-product__li--product"><i class="fa fa-info-circle"></i></li>
                                       <li class="subject-product__li subject-product__li--product">Chapter-wise Test </li>
-                                      <li class="subject-product__li subject-product__li--product"><del>1150</del></li>
-                                      <li class="subject-product__li subject-product__li--product">1150</li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:150px;"><del>1150</del></li>
+                                      <li class="subject-product__li subject-product__li--product" style="width:160px;">1150</li>
                                     </ul>
                                   </div>
                                   <h3 class="pricing-cart__subject-product_header">Chemistry</h3>
